[package]
name = "sd-id128"
version = "1.0.0"
authors = ["Christian Klaue <mail@ck76.de>"]
edition = "2018"
description = "A wrapper for sd-id128 implemented in libsystemd."
readme = "README.md"
repository = "https://gitlab.com/ente76/sd-id128"
license = "AGPL-3.0"
keywords = ["systemd", "sd-id128", "ID128", "UUID"]
categories = ["os::linux-apis", "external-ffi-bindings", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
240 = []
233 = []
default = ["240"]

[dependencies]
sd-sys = {version="0.1"}
